--- a/DD/Files/introduction.tex
+++ b/DD/Files/introduction.tex
@@ -48,6 +48,7 @@ TODO: remove unused ones
     \item {\textbf{REST:} REpresentational State Transfer}
     \item {\textbf{URL:} Uniform Resource Locator}
     \item {\textbf{HTTPS:} HyperText Transfer Protocol Secure}
+    \item {\textbf{DMZ:} Demilitarized Zone}
 \end{itemize}
 \subsubsection{Abbreviations}
 \begin{itemize}
