--- a/DD/dd.tex
+++ b/DD/dd.tex
@@ -106,7 +106,7 @@
 \input{Files/req_trac.tex}
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
-{{\section{Implementation, Integration and Test Plan}}}
+{{\section{Implementation, Integration, Test Plan}}}
 \label{sect:implementation}
 \input{Files/implementation.tex}
 %------------------------------------------------------------------------------------------------------------------------------------------------
